src/tui/snapshots/codecoder__tui__render__snapshot_tests__browse_selected.snap
---
source: src/tui/render.rs
expression: snap
---
"  ▸ reasoning (2 lines)                                                         "
"                                                                                "
"  ▸ reasoning (2 lines)                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" BROWSE  m  ctx 0%  · ↑/↓ select · tab fold · esc exit                          "
