src/tui/snapshots/codecoder__tui__render__snapshot_tests__dialog_ask_question.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          ┌ Question ────────────────────────────────────────────────┐          "
"          │What file should I edit?                                  │          "
"          │                                                          │          "
"          │›                                                         │          "
"          │                                                          │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
