src/tui/snapshots/codecoder__tui__render__snapshot_tests__dialog_confirm.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ┌ Confirm ─────────────────────────────────────────────┐            "
"            │Are you sure you want to delete this file?            │            "
"            │                                                      │            "
"            │ [y] yes    [n] no                                    │            "
"            └──────────────────────────────────────────────────────┘            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
