src/tui/snapshots/codecoder__tui__render__snapshot_tests__dialog_permission_no_project.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ┌ Permission ────────────────────────────────────────┐             "
"             │run git commit                                      │             "
"             │key: run_command:git@shell                          │             "
"             │                                                    │             "
"             │▸ [o] once    this call only                        │             "
"             │  [s] session don't ask again this run              │             "
"             │  [n] deny                                          │             "
"             │                                                    │             "
"             └────────────────────────────────────────────────────┘             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
