src/tui/snapshots/codecoder__tui__render__snapshot_tests__dialog_plan_approval.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌ Plan — approve? ─────────────────────────────────────────────┐        "
"        │1. Read the file                                              │        "
"        │2. Edit the line                                              │        "
"        │3. Commit                                                     │        "
"        │                                                              │        "
"        │ [a] approve    [r] reject                                    │        "
"        │                                                              │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
