src/tui/snapshots/codecoder__tui__render__snapshot_tests__dialog_trust.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"      ┌ Trust project? ──────────────────────────────────────────────────┐      "
"      │Trust this project's agent config? /tmp/project                   │      "
"      │Loads AGENTS.md, skills/prompts/capabilities, and codecoder.json. │      "
"      │                                                                  │      "
"      │ [a] always    [o] once    [n] never                              │      "
"      │                                                                  │      "
"      └──────────────────────────────────────────────────────────────────┘      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
