src/tui/snapshots/codecoder__tui__render__snapshot_tests__help_open.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              ┌ Keys — any key closes ───────────────────────────┐              "
"              │ Enter                   send message             │              "
"              │ Shift+Enter / Ctrl+J    newline                  │              "
"              │ Ctrl+A / Ctrl+E         line start / end         │              "
"              │ Ctrl+W / Ctrl+K / Ctrl+Udel word / kill to EOL / │              "
"              │ Ctrl+←/→                word left / right        │              "
"              │ ↑ (empty input)         browse transcript        │              "
"              │ Tab                     fold / unfold latest bloc│              "
"              │ Ctrl+F / Ctrl+R         search / reverse search  │              "
"              │ @path                   file completion · /  comm│              "
"              │ Mouse wheel             scroll transcript        │              "
"              │ F2                      toggle mouse capture (nat│              "
"              │ Esc                     close overlay / cancel   │              "
"              │ Ctrl+C                  quit                     │              "
"              └──────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" HELP  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                     "
