src/tui/snapshots/codecoder__tui__render__snapshot_tests__insert_multiline.snap
---
source: src/tui/render.rs
assertion_line: 502
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› line1                                                                         "
"  line2                                                                         "
"  line3                                                                         "
" INSERT  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
