src/tui/snapshots/codecoder__tui__render__snapshot_tests__insert_permission_dialog.snap
---
source: src/tui/render.rs
assertion_line: 526
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ┌ Permission ────────────────────────────────────────┐             "
"             │git commit                                          │             "
"             │key: run_command:git                                │             "
"             │                                                    │             "
"             │▸ [o] once    this call only                        │             "
"             │  [s] session don't ask again this run              │             "
"             │  [p] project persist to codecoder.json             │             "
"             │  [n] deny                                          │             "
"             │                                                    │             "
"             └────────────────────────────────────────────────────┘             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" DIALOG  m  ctx 0%  · ↑/↓ select · enter confirm · esc deny                     "
